# dags-test

./: .gitignore  README.md  cdk.json  cdktf.json  config.py  config.toml  config.yml  deploy_dags.py  main.py  requirements-dags.txt  requirements-deployment.txt  requirements.txt  types.py
dags/: common.py  dag_hello_world.py  dag_phoenix_datadiff.py  hello_world.py  models.py  phoenix_datadiff.py  requirements.txt
infra/: .pdm.toml  pyproject.toml
infra/aw_data_infra/stacks/: base.py
infra/aw_data_infra/stacks/airflow/: dags.py  environment.py
infra/aw_data_infra/stacks/batch/: infra.py  job_definition.py
infra/aw_data_infrastructure/stacks/: base.py
infra/aw_data_infrastructure/stacks/airflow/: dags.py  environment.py
scripts/: run-airflow.zsh  verify_env.py
stacks/: airflow_environment.py  aspects.py  base.py  dags.py  literals.py
stacks/airflow/: dags.py  environment.py
