[project]
name = "aw_data_infrastructure"
version = "0.1.0"
description = "infrastructure as code for data engineering"
authors = [
    {name = "Stephan Fitzpatrick", email = "stephan.fitzpatrick@awacexternal.com"},
]
dependencies = [
    "cdktf~=0.13",
    "cdktf-cdktf-provider-aws~=10.0",
    "python-box~=6.1",
    "boto3~=1.18",
    "toml~=0.10",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
